# verbose-version-info

./: .all-contributorsrc  .coveragerc  .gitignore  .gitmodules  .lgtm.yml  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  HISTORY.md  LICENSE  Makefile  README.md  install_dev_dependecies.py  install_test_distributions.py  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/: codeql.yml  dependabot.yml
.github/workflows/: autoupdate-pre-commit-config.yml  codeql.yml  test.yml
docs/: Makefile  api_docs.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
tests/: __init__.py  conftest.py  test_cli.py  test_resource_finders.py  test_utils.py  test_vcs.py  test_verbose_version_info.py
tests/dummy_packages/: Readme.md
tests/dummy_packages/editable_install_setup_cfg/: setup.py
tests/dummy_packages/editable_install_setup_py/: setup.py
tests/dummy_packages/editable_install_src_pattern/: setup.py
tests/dummy_packages/local_install/: local_install.py  setup.py
tests/dummy_packages/local_install with spaces in path/: setup.py
tests/dummy_packages/local_install_src_pattern/: setup.py
verbose_version_info/: __init__.py  cli.py  data_containers.py  metadata_compat.py  resource_finders.py  settings.py  utils.py  vcs.py  verbose_version_info.py
