[metadata]
name = verbose_version_info
version = attr: verbose_version_info.__version__
description = Python Boilerplate contains all the boilerplate you need to create a Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/verbose-version-info
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = verbose_version_info
project_urls =
    Documentation=https://verbose-version-info.readthedocs.io
    Changelog=https://verbose-version-info.readthedocs.io/en/latest/history.html
    Source=https://github.com/s-weigand/verbose-version-info
    Tracker=https://github.com/s-weigand/verbose-version-info/issues

[options]
packages = find:
install_requires =
    Click>=7.0
python_requires = >=3.6.1
include_package_data = True
setup_requires =
    setuptools>=41.2
zip_safe = False

[options.entry_points]
console_scripts =
    verbose_version_info=verbose_version_info.cli:main

[options.packages.find]
include =
    verbose_version_info
    verbose_version_info.*
exclude =
    tests*

[flake8]
exclude = docs

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = autoattribute,autoclass,autoexception,autofunction,automethod,automodule,highlight
