[metadata]
name = verbose_version_info
version = attr: verbose_version_info.__version__
description = Python Boilerplate contains all the boilerplate you need to create a Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-weigand/verbose-version-info
author = Sebastian Weigand
author_email = s.weigand.phy@gmail.com
license = Apache Software License 2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = verbose_version_info
project_urls =
    Documentation=https://verbose-version-info.readthedocs.io
    Changelog=https://verbose-version-info.readthedocs.io/en/latest/history.html
    Source=https://github.com/s-weigand/verbose-version-info
    Tracker=https://github.com/s-weigand/verbose-version-info/issues

[options]
packages = find:
install_requires =
    importlib-metadata>=3.4.0;python_version < '3.8'
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools>=41.2
zip_safe = False

[options.packages.find]
exclude =
    tests*
include =
    verbose_version_info
    verbose_version_info.*

[options.entry_points]
console_scripts =
    vvinfo=verbose_version_info.cli:main

[options.extras_require]
cli =
    rich>=10.9.0
    typer>=0.4.0

[flake8]
max-line-length = 99
exclude = docs
per-file-ignores =
    __init__.py: F401
    verbose_version_info/metadata_compat.py: F401

[darglint]
docstring_style = numpy

[pydocstyle]
convention = numpy

[aliases]
test = pytest

[rstcheck]
ignore_directives = highlight,autosummary

[mypy]
show_error_codes = True
